Session Timer Serive Refactoring 2 - cleaner service integration (#6)
* Refactoring SessionTimerService

* Adding unit tests for OverviewViewModel